--- a/TrabalhoFinalML.ipynb
+++ b/TrabalhoFinalML.ipynb
@@ -17,10 +17,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Importando pacotes\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.covariance import EllipticEnvelope"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#carregando base de dados\n",
+    "seattle_rains = pd.read_csv('seattleWeather_1948-2017.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DATE</th>\n",
+       "      <th>PRCP</th>\n",
+       "      <th>TMAX</th>\n",
+       "      <th>TMIN</th>\n",
+       "      <th>RAIN</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1948-01-01</td>\n",
+       "      <td>0.47</td>\n",
+       "      <td>51</td>\n",
+       "      <td>42</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1948-01-02</td>\n",
+       "      <td>0.59</td>\n",
+       "      <td>45</td>\n",
+       "      <td>36</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1948-01-03</td>\n",
+       "      <td>0.42</td>\n",
+       "      <td>45</td>\n",
+       "      <td>35</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1948-01-04</td>\n",
+       "      <td>0.31</td>\n",
+       "      <td>45</td>\n",
+       "      <td>34</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1948-01-05</td>\n",
+       "      <td>0.17</td>\n",
+       "      <td>45</td>\n",
+       "      <td>32</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         DATE  PRCP  TMAX  TMIN  RAIN\n",
+       "0  1948-01-01  0.47    51    42  True\n",
+       "1  1948-01-02  0.59    45    36  True\n",
+       "2  1948-01-03  0.42    45    35  True\n",
+       "3  1948-01-04  0.31    45    34  True\n",
+       "4  1948-01-05  0.17    45    32  True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "seattle_rains.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Tirando linhas com valores 'perdidos'\n",
+    "seattle_rains = seattle_rains.dropna()"
+   ]
   }
  ],
  "metadata": {
